# AINoteWork

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: ai_clients.rs  claude.rs  commands.rs  lib.rs  main.rs  mcp.rs  web.rs
