[package]
name = "ai-note-work"
version = "0.1.0"
description = "AI Note Work - Advanced Research and Note-taking App"
authors = ["you"]
edition = "2021"

[lib]
name = "ai_note_work_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
chrono = "0.4"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full", "process"] }
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1"
thiserror = "1"
dirs = "5"
scraper = "0.22"
